# cocktail-bot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
dags/: export_to_minio.py
services/: data_loader.py  db.py  embedder.py  feedback.py  notifications.py  orders.py  recommender.py  users.py
services/bot/: admin_main.py  api_client.py  guest_main.py  keyboards.py  llm.py  llm_openai.py
services/bot/handlers/: admin.py  guest.py
